[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/InstaGun/InstaGun.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.210224, 1.02212 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.701961, 0.701961, 0, 0 ) ]
}

[node name="InstaGun" type="Node2D"]
script = ExtResource( 1 )

[node name="sprite" type="ColorRect" parent="."]
margin_top = -2.0
margin_right = 20.0
margin_bottom = 2.0
color = Color( 0, 0, 0, 1 )

[node name="bullet_startpoint" type="Position2D" parent="."]
position = Vector2( 20, 0 )

[node name="bullet_container" type="Node" parent="."]

[node name="bullet_streak" type="Line2D" parent="bullet_container"]
width = 1.6
default_color = Color( 1, 1, 1, 1 )

[node name="streak_animation" type="AnimationPlayer" parent="."]
root_node = NodePath("../bullet_container/bullet_streak")
anims/fade_out = SubResource( 1 )
